k8s/base/service-three.yml
apiVersion: v1
kind: Service
metadata:
  name: service-three
  labels:
    app: service-three
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: http
      name: some-other-http
      protocol: TCP
  selector:
    app: service-three
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-three
spec:
  selector:
    matchLabels:
      app: service-three
  replicas: 1
  template:
    metadata:
      labels:
        app: service-three
    spec:
      restartPolicy: Always
      containers:
        - name: service-three
          image: issue-repro/express
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
